--- a/djangotemplate/src/djangotemplate/backend/app/templates/tasks/tasks.html
+++ b/djangotemplate/src/djangotemplate/backend/app/templates/tasks/tasks.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "../base.html" %}
 {% load extra_filters %}
 {% block content %}
 <div class="container-fluid">
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-sm-10">
             <div class="card" style="margin-top: 10px;">
-                <div class="card-header">Tasks</div>
+                <div class="card-header">Available tasks</div>
                 <div class="card-body">
                     <table class="table">
                         {% for task_name in task_names %}
@@ -26,35 +26,11 @@
     <div class="row">
         <div class="col-sm-10">
             <div class="card" style="margin-top: 10px;">
-                <div class="card-header">Pipelines</div>
-                <div class="card-body">
-                    <a href="/pipelines/">BasicPipeline</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-10">
-            <div class="card" style="margin-top: 10px;">
-                <div class="card-header">Currently running task</div>
+                <div class="card-header">Task instances</div>
                 <div class="card-body">
                     <input type="checkbox" class="form-check-input" id="auto-refresh" onclick="autoRefresh();" {% if auto_refresh %} checked {% endif %}>
-                    <label class="form-check-label" for="auto-refresh">Auto refresh</label>
-                    <script>
-                        function autoRefresh() {
-                            let href = window.location.href;
-                            if(document.getElementById('auto-refresh').checked) {
-                                    if(href.endsWith('?auto-refresh=1') === false) {
-                                        href = window.location.href + '?auto-refresh=1';
-                                    }
-                                } else {
-                                    if(href.endsWith('?auto-refresh=1')) {
-                                        href = href.substring(0, href.length - 15);
-                                    }
-                                }
-                            window.location = href;
-                        }
-                    </script>
+                    <label class="form-check-label" for="auto-refresh">Auto refresh</label><br>
+                    <br>
                     <table class="table">
                         <tr>
                             <th>Task name</th>
@@ -62,21 +38,19 @@
                             <th>Progress</th>
                             <th>Commands</th>
                         </tr>
-                        {% if current_task %}
-                            <tr>
-                                <td>{{ current_task.get_name }}</td>
-                                <td>{{ current_task.get_status }}</td>
-                                <td>{{ current_task.get_progress }}</td>
-                                <td>
-                                    {% if current_task.get_status == "running" %}
-                                    <a href="/tasks/?cancel=1">[cancel]</a>
-                                    {% endif %}
-                                    {% if current_task.get_status == "completed" or current_task.get_status == "failed" or current_task.get_status == "canceled" %}
-                                        <a href="/tasks/?remove=1">[remove]</a>
-                                    {% endif %}
-                                </td>
-                            </tr>
-                        {% endif %}
+                        {% for task in tasks %}
+                            <td>{{ task.name }}</td>
+                            <td>{{ task.status }}</td>
+                            <td>{{ task.progress }}</td>
+                            <td>
+                                {% if task.status == "running" %}
+                                    <a href="/tasks/{{ task_name }}/cancel">[cancel]</a>
+                                {% endif %}
+                                {% if task.get_status == "completed" or task.get_status == "failed" or task.get_status == "canceled" %}
+                                    <a href="/tasks/{{ task_name }}/remove">[remove]</a>
+                                {% endif %}
+                            </td>
+                        {% endfor %}
                     </table>
                 </div>
             </div>
