Task pages showing correctly

--- a/djangotemplate/src/djangotemplate/backend/app/templates/help/index.html
+++ b/djangotemplate/src/djangotemplate/backend/app/templates/help/index.html
@@ -5,6 +5,7 @@
     <div class="row">
         <p style="margin-top: 10px">
             [<a href="/filesets/">Filesets</a>]&nbsp;
+            [<a href="/tasks/">Tasks</a>]&nbsp;
             [<a href="/logs/">Logs</a>]&nbsp;
             [<a href="/help/">Help</a>]
         </p>
