--- a/djangotemplate/src/djangotemplate/backend/app/templates/tasks/exampletask.html
+++ b/djangotemplate/src/djangotemplate/backend/app/templates/tasks/exampletask.html
@@ -2,13 +2,7 @@
 {% load extra_filters %}
 {% block content %}
 <div class="container-fluid">
-    <div class="row">
-        <p style="margin-top: 10px">
-            [<a href="/filesets/">Filesets</a>]&nbsp;
-            [<a href="/logs/">Logs</a>]&nbsp;
-            [<a href="/help/">Help</a>]
-        </p>
-    </div>
+    <div class="row"><p style="margin-top: 10px">[<a href="/tasks/">Back</a>]&nbsp;</p></div>
     <div class="row">
         <div class="col-sm-10">
             <div class="card" style="margin-top: 10px;">
