--- a/mydjangoapp/src/mydjangoapp/backend/app/templates/task.html
+++ b/mydjangoapp/src/mydjangoapp/backend/app/templates/task.html
@@ -37,11 +37,11 @@
                             <br>
                         {% endfor %}
 
-                        <p><b>Output fileset names</b></p>
+                        <!-- <p><b>Output fileset names</b></p>
                         {% for output in outputs %}
-                            <input type="text" class="form-control" id="{{ output.name }}" name="{{ output.name }}" placeholder="{{ output.label }} (optional)">
+                            <input type="text" class="form-control" id="{{ output.name }}" name="{{ output.name }}" placeholder="{{ output.label }} (optional)" value="">
                             <br>
-                        {% endfor %}
+                        {% endfor %} -->
                         <button type="submit" class="btn btn-primary">Run task</button>
                     </form>
                 </div>
