--- a/mydjangoapp/src/mydjangoapp/backend/app/templates/tasks.html
+++ b/mydjangoapp/src/mydjangoapp/backend/app/templates/tasks.html
@@ -40,7 +40,7 @@
                             <th>Created</th>
                             <th>Commands</th>
                         </tr>
-                        {% for task in tasks %}
+                        {% for task in active_tasks %}
                             <tr>
                                 <td>{{ task.name }}</td>
                                 <td>{{ task.status }}</td>
