--- a/mydjangoapp/src/mydjangoapp/backend/app/templates/fileset.html
+++ b/mydjangoapp/src/mydjangoapp/backend/app/templates/fileset.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
     <div class="row">
         <p style="margin-top: 10px">
-            [<a href="/filesets/">Filesets</a>]
+            [<a href="/filesets/">Back</a>]
         </p>
     </div>
     <div class="row">
