--- a/mydjangoapp/src/mydjangoapp/backend/app/templates/task.html
+++ b/mydjangoapp/src/mydjangoapp/backend/app/templates/task.html
@@ -2,7 +2,11 @@
 {% load extra_filters %}
 {% block content %}
 <div class="container-fluid">
-    <div class="row"><p style="margin-top: 10px">[<a href="/tasks/">Back</a>]&nbsp;</p></div>
+    <div class="row">
+        <p style="margin-top: 10px">
+            [<a href="/tasks/">Back</a>]&nbsp;
+        </p>
+    </div>
     <div class="row">
         <div class="col-sm-10">
             <div class="card" style="margin-top: 10px;">
