--- a/mydjangoapp/src/mydjangoapp/backend/app/templates/tasks.html
+++ b/mydjangoapp/src/mydjangoapp/backend/app/templates/tasks.html
@@ -4,10 +4,7 @@
 <div class="container-fluid">
     <div class="row">
         <p style="margin-top: 10px">
-            [<a href="/filesets/">Filesets</a>]&nbsp;
-            [<a href="/tasks/">Tasks</a>]&nbsp;
-            [<a href="/logs/">Logs</a>]&nbsp;
-            [<a href="/help/">Help</a>]
+            [<a href="/filesets/">Filesets</a>]&nbsp;[<a href="/logs/">Logs</a>]&nbsp;[<a href="/help/" target="_blank">Help</a>]
         </p>
     </div>
     <div class="row">
