--- a/mydjangoapp/src/mydjangoapp/backend/app/templates/pipeline.html
+++ b/mydjangoapp/src/mydjangoapp/backend/app/templates/pipeline.html
@@ -1,33 +1,3 @@
-<!-- {
-    "pipeline_name": "ExamplePipeline",
-    "input": "D:\\Mosamatic\\DjangoTemplate\\ExamplePipeline\\input",
-    "output": "D:\\Mosamatic\\DjangoTemplate\\ExamplePipeline\\output",
-    "tasks": [
-        {
-            "name": "MergeDirectoriesTask",
-            "inputs": {
-                "input1": "__pipeline.input__",
-                "input2": "__pipeline.input__"
-            },
-            "outputs": {
-                "output": "D:\\Mosamatic\\DjangoTemplate\\ExamplePipeline\\MergeDirectoriesTask"
-            },
-            "params": {
-                "keep_duplicates": true
-            }
-        },
-        {
-            "name": "CopyFilesTask",
-            "inputs": {
-                "input": "__MergeDirectoriesTask.outputs.output__"
-            },
-            "outputs": {
-                "output": "__pipeline.output__"
-            },
-            "params": null
-        }
-    ]
-} -->
 {% extends "base.html" %}
 {% load extra_filters %}
 {% block content %}
@@ -47,39 +17,7 @@
                 <div class="card-body">
                     <form action="/pipelines/{{ pipeline_name }}/run" method="post" enctype="multipart/form-data" id="my-form">
                         {% csrf_token %}
-                        <textarea style="height: 400px;" name="pipeline_config" class="form-control" rows="5" placeholder="Enter your text here...">
-{
-    "pipeline_name": "ExamplePipeline",
-    "input": "/pipeline_data/input",
-    "output": "/pipeline_data/output",
-    "tasks": [
-        {
-            "name": "MergeDirectoriesTask",
-            "inputs": {
-                "input1": "__pipeline.input__",
-                "input2": "__pipeline.input__"
-            },
-            "outputs": {
-                "output": "/pipeline_data/MergeDirectoriesTask"
-            },
-            "params": {
-                "keep_duplicates": true
-            }
-        },
-        {
-            "name": "CopyFilesTask",
-            "inputs": {
-                "input": "__MergeDirectoriesTask.outputs.output__"
-            },
-            "outputs": {
-                "output": "__pipeline.output__"
-            },
-            "params": null
-        }
-    ]
-}
-                        </textarea>
-                        <br>
+                        <textarea style="height: 400px;" name="pipeline_config" class="form-control" rows="5" placeholder="Enter your text here..."></textarea><br>
                         <button type="submit" class="btn btn-primary">Run pipeline</button>
                     </form>
                 </div>
